Removed currently unused dependency declarations for server build
Signed-off-by: Christopher R. Curzio <13078835+ccurzio@users.noreply.github.com>

--- a/pkgbuild/server/luminum-server-0.0.1/DEBIAN/control
+++ b/pkgbuild/server/luminum-server-0.0.1/DEBIAN/control
@@ -3,7 +3,7 @@ Version: 0.0.1
 Section: base
 Priority: optional
 Architecture: amd64
-Depends: gnupg (>= 2.2.40), apache2 (>= 2.4.59), libpam0g-dev (>= 1.5.2), libapache2-mod-authnz-external (>= 3.3.2), php (>= 8.2), perl (>= 5.36.0), openssl (>= 3.0.11), libssh2-1 (>= 1.10.0), openssh-client (>= 9.2), openssh-server (>= 9.2), openssh-sftp-server (>= 9.2), sqlite3 (>= 3.40.1), mariadb-server (>= 10.11.6)
+Depends: gnupg (>= 2.2.40), libapache2-mod-authnz-external (>= 3.3.2), openssl (>= 3.0.11), sqlite3 (>= 3.40.1), mariadb-server (>= 10.11.6)
 Maintainer: Christopher R. Curzio <ccurzio@accipiter.org>
 Description: Luminum is an autonomous endpoint security and 
  management platform.
