--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -13,4 +13,6 @@ clap = "3.0.0"
 regex = "1.5"
 native-tls = "0.2.8"
 openssl = "0.10.64"
+rpassword = "5.0"
 rusqlite = "0.26.0"
+base64 = "0.22.1"
