--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -17,3 +17,5 @@ rpassword = "5.0"
 rusqlite = "0.26.0"
 base64 = "0.22.1"
 short-crypt = "1.0.28"
+serde = { version = "1.0.203", features = ["derive"] }
+serde_json = "1.0.117"
