--- a/client/modules/macos/Integrity/Cargo.toml
+++ b/client/modules/macos/Integrity/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 [dependencies]
 notify = "5.0"
 pkg-config = "0.3.30"
-
+serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+libc = "0.2.155"
