--- a/client/modules/linux/Integrity/Cargo.toml
+++ b/client/modules/linux/Integrity/Cargo.toml
@@ -3,7 +3,7 @@ name = "Lumy_Integrity"
 version = "0.0.1"
 edition = "2021"
 
-[dependencies]
+[target.'cfg(target_os = "linux")'.dependencies]
 notify = "5.0"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
