--- a/client/modules/macos/Integrity/Cargo.toml
+++ b/client/modules/macos/Integrity/Cargo.toml
@@ -3,9 +3,7 @@ name = "Lumy_Integrity"
 version = "0.0.1"
 edition = "2021"
 
-[dependencies]
+[target.'cfg(target_os = "macos")'.dependencies]
 notify = "5.0"
-pkg-config = "0.3.30"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-libc = "0.2.155"
