--- a/client/macos/Cargo.toml
+++ b/client/macos/Cargo.toml
@@ -3,4 +3,8 @@ name = "LuminumClient"
 version = "0.0.1"
 edition = "2021"
 
-[dependencies]
+[target.'cfg(target_os = "macos")'.dependencies]
+clap = "3.0.0"
+chrono = "0.4"
+colored = "2.0"
+rusqlite = "0.26.0"
