--- a/client/linux/Cargo.toml
+++ b/client/linux/Cargo.toml
@@ -8,3 +8,5 @@ clap = "3.0.0"
 chrono = "0.4"
 colored = "2.0"
 rusqlite = "0.26.0"
+serde = { version = "1.0.203", features = ["derive"] }
+serde_json = "1.0.117"
