--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -15,7 +15,8 @@ native-tls = "0.2.8"
 openssl = "0.10.64"
 rpassword = "5.0"
 rusqlite = "0.26.0"
+magic-crypt = "3.1.13"
 base64 = "0.22.1"
-short-crypt = "1.0.28"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
+random_str = "0.1.2"
