--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -21,3 +21,4 @@ base64 = "0.22.1"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
 random_str = "0.1.2"
+mysql = "25.0.1"
