Added pubkey flag option to server; Changed config to setup in linux client; added break handler to linux client; implemented configuration writing and parsing in linux client

--- a/client/linux/Cargo.toml
+++ b/client/linux/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [target.'cfg(target_os = "linux")'.dependencies]
 clap = "3.0.0"
 chrono = "0.4"
+ctrlc = "3.3.0"
 colored = "2.0"
 rusqlite = "0.26.0"
 serde = { version = "1.0.203", features = ["derive"] }
