--- a/client/linux/Cargo.toml
+++ b/client/linux/Cargo.toml
@@ -9,5 +9,6 @@ chrono = "0.4"
 ctrlc = "3.3.0"
 colored = "2.0"
 rusqlite = "0.26.0"
+native-tls = "0.2.8"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
