--- a/client/linux/Cargo.toml
+++ b/client/linux/Cargo.toml
@@ -12,3 +12,7 @@ rusqlite = "0.26.0"
 native-tls = "0.2.8"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
+
+[dependencies]
+gethostname = "0.4.3"
+hostname = "0.4.0"
