Fixed erroneous dependencies in server; rearchitected CLIENTS database connection to use a shared pool; adjusted handle_ functions to accept a DB connection as an argument; added register_client function to server which parses an incoming registration request and inserts the relevant data into the CLIENTS database

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,3 +1,4 @@
+
 [package]
 name = "LuminumServer"
 version = "0.0.1"
@@ -22,3 +23,6 @@ serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
 random_str = "0.1.2"
 mysql = "25.0.1"
+lazy_static = "1.4.0"
+uuid = { version = "1.8.0", features = ["v4"] }
+
