--- a/client/linux/Cargo.toml
+++ b/client/linux/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 clap = "3.0.0"
 chrono = "0.4"
 ctrlc = "3.3.0"
+regex = "1.5"
 colored = "2.0"
 rusqlite = "0.26.0"
 native-tls = "0.2.8"
@@ -14,5 +15,6 @@ serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
 
 [dependencies]
+etc-os-release = "0.1.0"
 gethostname = "0.4.3"
 hostname = "0.4.0"
