--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -25,3 +25,5 @@ random_str = "0.1.2"
 mysql = "25.0.1"
 lazy_static = "1.4.0"
 uuid = { version = "1.8.0", features = ["v4"] }
+rmp-serde = "1.3.0"
+rmp = "0.8.14"
