--- a/client/linux/Cargo.toml
+++ b/client/linux/Cargo.toml
@@ -9,9 +9,13 @@ chrono = "0.4"
 ctrlc = "3.3.0"
 regex = "1.5"
 colored = "2.0"
-etc-os-release = "0.1.0"
+openssl = "0.10.64"
 rusqlite = "0.26.0"
 native-tls = "0.2.8"
+etc-os-release = "0.1.0"
 gethostname = "0.4.3"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
+
+[dependencies]
+rmp-serde = "1.3.0"
