--- a/client/modules/linux/Integrity/Cargo.toml
+++ b/client/modules/linux/Integrity/Cargo.toml
@@ -8,3 +8,9 @@ notify = "5.0"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 rusqlite = "0.26.0"
+
+[dependencies]
+notify-debouncer-full = "0.3.1"
+rmp-serde = "1.3.0"
+serde_json = "1.0"
+users = "0.11.0"
