--- a/client/linux/Cargo.toml
+++ b/client/linux/Cargo.toml
@@ -17,7 +17,8 @@ gethostname = "0.4.3"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
 rmp-serde = "1.3.0"
+tokio = { version = "1.38.0", features = ["full"] }
+local-ip-address = "0.6.1"
 
 [dependencies]
-etc-os-release = "0.1.0"
-local-ip-address = "0.6.1"
+futures = "0.3.30"
